manifests/go-helpusersvote/go-helpusersvote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${_name}
  name: ${_name}
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: ${_name}
