manifests/go-helpusersvote/go-helpusersvote-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: contour
    kubernetes.io/ingress.allow-http: "false"
  labels:
    ingress: contour
  name: ${_name}
spec:
  tls:
  - secretName: ${tls_secret}
  rules:
  - host: ${_name}${domain}
    http:
      paths:
      - backend:
          serviceName: ${_name}
          servicePort: http
